fixed alignment of text fields to fit project requirements

--- a/Project0/styles2.css
+++ b/Project0/styles2.css
@@ -28,3 +28,9 @@ form {
     background-color: #4484f4;
     color: white;
 }
+
+.labels {
+    display: inline-block;
+    width: 10%;
+    min-width: 100px;
+}
